tests/derive/ui/ser/fail/nested_missing_attribute.stderr
error[E0599]: no method named `to_message` found for reference `&Tag` in the current scope
 --> tests/derive/ui/ser/fail/nested_missing_attribute.rs:5:10
  |
5 | #[derive(ToMessage)]
  |          ^^^^^^^^^ method not found in `&Tag`
  |
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following trait defines an item `to_message`, perhaps you need to implement it:
          candidate #1: `ToMessage`
  = note: this error originates in the derive macro `ToMessage` (in Nightly builds, run with -Z macro-backtrace for more info)
